--- a/main.css
+++ b/main.css
@@ -13,16 +13,16 @@
 .protItems{
         padding: 40px;
         margin: 30px auto;
-        width: 60%;
-
+        width: 100%;
+        max-width: 1140px;
 }
 
 
 .protItem{
     text-align: center;
-    width: calc((100% - 10px) / 3);
+    width: calc((100% - 40px) / 3);
     float: left;
-    margin-right: 5px;
+    margin-right: 20px;
     padding: 20px;
 
 }
